latex-template-version-01

--- a/body.tex
+++ b/body.tex
@@ -78,5 +78,5 @@
     \textbf{Extract two criterion out of seven explanatory criterion: Persuasiveness and Efficiency.}
 
     Example2: Why did my car just do that? Explaining semi-autonomous driving actions to improve driver understanding, trust, and performance\cite{koo2015did}
-    \textbf{Extract two types (what and how)based on question types from Intelligent Toolkit} \cite{lim2010toolkit, lim2011design}
+    \textbf{Extract two types (what and how)based on question types from Intelligent Toolkit} \cite{Brian2010toolkit, lim2011design}
 \subsection{Comparison between ``Detailed Explanation'' and ``Brief Explanation''}
