--- a/ref.bib
+++ b/ref.bib
@@ -74,19 +74,19 @@
   year={2015},
   publisher={Springer}
 }
-@inproceedings{lim2010toolkit,
-  title={Toolkit to support intelligibility in context-aware applications},
-  author={Lim, Brian Y and Dey, Anind K},
-  booktitle={Proceedings of the 12th ACM international conference on Ubiquitous computing},
-  pages={13--22},
-  year={2010},
-  organization={ACM}
-}
 @inproceedings{lim2011design,
   title={Design of an intelligible mobile context-aware application},
   author={Lim, Brian Y and Dey, Anind K},
   booktitle={Proceedings of the 13th International Conference on Human Computer Interaction with Mobile Devices and Services},
   pages={157--166},
   year={2011},
+  organization={ACM}
+}
+@inproceedings{Brian2010toolkit,
+  title={Toolkit to support intelligibility in context-aware applications},
+  author={Lim, Brian Y and Dey, Anind K},
+  booktitle={Proceedings of the 12th ACM international conference on Ubiquitous computing},
+  pages={13--22},
+  year={2010},
   organization={ACM}
 }
