--- a/literature.bib
+++ b/literature.bib
@@ -1,3 +1,14 @@
+%% This BibTeX bibliography file was created using BibDesk.
+%% http://bibdesk.sourceforge.net/
+
+
+%% Created for Bastian Pfleging at 2016-07-01 13:45:13 +0200 
+
+
+%% Saved with string encoding Unicode (UTF-8) 
+
+
+
 @incollection{ricci2011introduction,
   title={Introduction to recommender systems handbook},
   author={Ricci, Francesco and Rokach, Lior and Shapira, Bracha},
