--- a/literature.bib
+++ b/literature.bib
@@ -6,9 +6,48 @@
 
 
 %% Saved with string encoding Unicode (UTF-8) 
-
-
-
+@incollection{adomavicius2008personalization,
+  title={Personalization and recommender systems},
+  author={Adomavicius, Gediminas and Huang, Zan and Tuzhilin, Alexander},
+  booktitle={State-of-the-Art Decision-Making Tools in the Information-Intensive Age},
+  pages={55--107},
+  year={2008},
+  publisher={INFORMS}
+}
+@article{balabanovic1997fab,
+  title={Fab: content-based, collaborative recommendation},
+  author={Balabanovi{\'c}, Marko and Shoham, Yoav},
+  journal={Communications of the ACM},
+  volume={40},
+  number={3},
+  pages={66--72},
+  year={1997},
+  publisher={ACM}
+}
+@misc{don2011managing,
+  title={Managing customer relationships: a strategic framework},
+  author={Don, Peppers and Martha, Rogers},
+  year={2011},
+  publisher={Wiley Press}
+}
+@article{knijnenburg2012explaining,
+  title={Explaining the user experience of recommender systems},
+  author={Knijnenburg, Bart P and Willemsen, Martijn C and Gantner, Zeno and Soncu, Hakan and Newell, Chris},
+  journal={User Modeling and User-Adapted Interaction},
+  volume={22},
+  number={4-5},
+  pages={441--504},
+  year={2012},
+  publisher={Kluwer Academic Publishers}
+}
+@inproceedings{pu2011user,
+  title={A user-centric evaluation framework for recommender systems},
+  author={Pu, Pearl and Chen, Li and Hu, Rong},
+  booktitle={Proceedings of the fifth ACM conference on Recommender systems},
+  pages={157--164},
+  year={2011},
+  organization={ACM}
+}
 @incollection{ricci2011introduction,
   title={Introduction to recommender systems handbook},
   author={Ricci, Francesco and Rokach, Lior and Shapira, Bracha},
@@ -51,12 +90,32 @@
   year={2010},
   organization={ACM}
 }
+@article{tintarev2012evaluating,
+  title={Evaluating the effectiveness of explanations for recommender systems},
+  author={Tintarev, Nava and Masthoff, Judith},
+  journal={User Modeling and User-Adapted Interaction},
+  volume={22},
+  number={4},
+  pages={399--439},
+  year={2012},
+  publisher={Springer}
+}
 @inproceedings{al2013explanations,
   title={Explanations in recommender systems: overview and research approaches},
   author={Al-Taie, MOHAMMED Z},
   booktitle={Proceedings of the 14th International Arab Conference on Information Technology, Khartoum, Sudan, ACIT},
   volume={13},
   year={2013}
+}
+@article{pu2007trust,
+  title={Trust-inspiring explanation interfaces for recommender systems},
+  author={Pu, Pearl and Chen, Li},
+  journal={Knowledge-Based Systems},
+  volume={20},
+  number={6},
+  pages={542--556},
+  year={2007},
+  publisher={Elsevier}
 }
 @article{gedikli2014should,
   title={How should I explain? A comparison of different explanation types for recommender systems},
@@ -93,11 +152,54 @@
   year={2011},
   organization={ACM}
 }
-@inproceedings{Brian2010toolkit,
-  title={Toolkit to support intelligibility in context-aware applications},
-  author={Lim, Brian Y and Dey, Anind K},
-  booktitle={Proceedings of the 12th ACM international conference on Ubiquitous computing},
-  pages={13--22},
-  year={2010},
+@article{van2004designing,
+  title={Designing usable interfaces for TV recommender systems},
+  author={Van Barneveld, Jeroen and Van Setten, Mark},
+  journal={Personalized Digital Television: Targeting Programs to Individual Viewers, Kluwer Academic Publishers, Dordrecht, The Netherlands},
+  pages={259--285},
+  year={2004},
+  publisher={Springer}
+}
+@inproceedings{herlocker2000explaining,
+  title={Explaining collaborative filtering recommendations},
+  author={Herlocker, Jonathan L and Konstan, Joseph A and Riedl, John},
+  booktitle={Proceedings of the 2000 ACM conference on Computer supported cooperative work},
+  pages={241--250},
+  year={2000},
+  organization={ACM}
+}
+@inproceedings{swearingen2002interaction,
+  title={Interaction design for recommender systems},
+  author={Swearingen, Kirsten and Sinha, Rashmi},
+  booktitle={Designing Interactive Systems},
+  volume={6},
+  number={12},
+  pages={312--334},
+  year={2002}
+}
+@inproceedings{czarkowski2002scrutable,
+  title={A scrutable adaptive hypertext},
+  author={Czarkowski, Marek and Kay, Judy},
+  booktitle={International Conference on Adaptive Hypermedia and Adaptive Web-Based Systems},
+  pages={384--387},
+  year={2002},
+  organization={Springer}
+}
+@article{felfernig2007knowledge,
+  title={Knowledge-based recommender technologies for marketing and sales},
+  author={Felfernig, Alexander and Teppan, Erich and Gula, Bartosz},
+  journal={International Journal of Pattern Recognition and Artificial Intelligence},
+  volume={21},
+  number={02},
+  pages={333--354},
+  year={2007},
+  publisher={World Scientific}
+}
+@inproceedings{sinha2002role,
+  title={The role of transparency in recommender systems},
+  author={Sinha, Rashmi and Swearingen, Kirsten},
+  booktitle={CHI'02 extended abstracts on Human factors in computing systems},
+  pages={830--831},
+  year={2002},
   organization={ACM}
 }
