--- a/lmumihs.tex
+++ b/lmumihs.tex
@@ -17,15 +17,6 @@
 \usepackage{float}
 \usepackage{dcolumn}
 \usepackage[backend=bibtex, style=numeric, isbn=true, doi=true, maxnames=99]{biblatex}
-\usepackage{titlesec}
-\titleformat{\chapter}
-  {\normalfont\fontfamily{phv}\fontsize{16}{19}\bfseries}{\thechapter}{1em}{}
-
-\titleformat{\section}
-  {\normalfont\fontfamily{phv}\fontsize{12}{17}\bfseries}{\thesection}{1em}{}
-
-\titleformat{\subsection}
-  {\normalfont\fontfamily{phv}\fontsize{10}{15}\bfseries}{\thesubsection}{0.8em}{}
 
 \addbibresource{literature.bib}
 
@@ -38,7 +29,7 @@
 
 %% Paper title.
 
-\title{A Literatural Overview on Explanation Types in Personalised Systems}
+\title{A Literatural Overview on Explanation Types in Personalization}
 
 %% Put your name here
 \author{Yifei Zhan}
@@ -53,11 +44,9 @@
 
 %% Abstract section.
 \abstract{
-This paper provides a literatural overview of two explanation types in recommender systems, which
-    are ``Detailed Explanation'' and ``Brief Explanation''. We also give some examples of both types and their analysis based on seven explanatory criterion.
-    The result shows that both types depend highly on their scenario.
-    When considering automobile scenario, we recommend the ``Brief Explanation'' and 
-    when considering desktop scenario, we recommend the ``Detailed Explanation''......
+This paper provides a literatural overview of two explanation types in personalization. The first type, detailed explanation,
+is mainly used in desktop scenario, while the second type, short explanation, is more suitable for mobile or automobile scenario.
+//TODO
 
 } % end of abstract
 
