--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,2 +1,33 @@
 \section{Discussion and Limitations}
+
+\indent  With the development of automobile industry and mobile markets, more and more recommender systems
+need to work in a context-aware environment and compared with the desktop environment, users can 
+not fully concentrate on the device because they also need to pay attention to environment at the same time.
+In such cases, a clear and brief explanation which informs the system's behaviors to users is especially important.
+
+\indent However, unlike the general explanations of recommender systems (explanations for desktop recommender systems), which has already some ``standard''
+methods (seven explanatory criterion or question-based explanations).
+There is no ``standard'' approach to design and evaluate short explanations. 
+
+\indent And compared with explanations of a recommender system in desktop scenario, which can contain pages of explanations,
+the explanation for automobile scenario is quite limited in the perspective of information amount. Thus, we need to extract some criterion from 
+the already existed standards of general explanations and check their validity for short explanations.
+
+\indent In Roland Bader's study, although he has successfully extracted two criterion (\textbf{efficiency} and \textbf{persuasiveness})
+for short explanations, he did not explain why he choose these two criterion specifically. 
+We still do not know whether some other criterion from the seven explanatory criterion are also suitable for short explanations.
+Thus, it might be helpful if further studies can examine and evaluate other criterion (\textbf{transparency}, \textbf{scrutability}, \textbf{effectiveness}, \textbf{trust} and \textbf{satisfaction}) for short explanations.
+
+The same goes with the study of Martin Steinert. Only two types of explanations (\textbf{what} and \textbf{why}) were evaluated.
+Therefore, some further studies can focus on other question-type-based explanations (\textbf{why not}, \textbf{how to}, \textbf{what if}, \textbf{inputs}, \textbf{outputs} and \textbf{certainty}).
+
 \section{Conclusion}
+
+\indent In this paper, it firstly provided a literatural overview of explanations in personalization and recommender systems.
+Then two kind of standards were introduced in order to 
+gain a better understanding of the methods used to design and evaluate explanations.
+Thirdly, an example of explanations on Google Advertisement was presented so that readers can understand how 
+these two methods/standards look like in reality. 
+In the next, we introduced two studies of short explanations in automobile scenario
+which extracted some useful information about how to especially design and evaluate short explanations.
+In the end, we discussed the limitations of both two studies on short explanations and proposed some possible directions for future studies.
