--- a/literature.bib
+++ b/literature.bib
@@ -203,3 +203,44 @@
   year={2002},
   organization={ACM}
 }
+@misc{googleAdSetting,
+   author = "Google Advertisement",
+   title = "Introduction of Google Advertisement",
+   year = "2017",
+   url = "https://support.google.com/ads/answer/1634057?hl=en-GB&ref_topic=7049263",
+   note = "[Online; accessed 1-Dec-2017]"
+ }
+ @online{googleAd1,
+ author  = "Google Advertisement",
+ title   = "Google Advertisement in w3cschool website",
+ year    = "2017",
+ url     = "https://www.w3schools.com/graphics/svg_inhtml.asp",
+ note    = "a snapshot of google advertisement, [Online; accessed 1-Dec-2017]"
+}
+@online{googleAd2,
+ author  = "Google Advertisement",
+ title   = "Explanations of personalization from Google Advertisement, the first level",
+ year    = "2017",
+ url     = "https://support.google.com/ads/answer/1634057?hl=en-GB&ref_topic=7049263",
+ note    = "A snapshot, [Online; accessed 1-Dec-2017]"
+}
+@online{googleAd3,
+ author  = "Google Advertisement",
+ title   = "Explanations of personalization from Google Advertisement, the second level",
+ year    = "2017",
+ url     = "https://support.google.com/ads/answer/7029660",
+ note    = "A snapshot, [Online; accessed 2-Dec-2017]"
+}
+@online{googleAd4,
+ author  = "Google Advertisement",
+ title   = "Explanations of personalization from Google Advertisement, the third level",
+ year    = "2017",
+ url     = "https://support.google.com/ads/answer/2662856",
+ note    = "A snapshot, [Online; accessed 2-Dec-2017]"
+}
+@book{reeves1996people,
+  title={How people treat computers, television, and new media like real people and places},
+  author={Reeves, Byron and Nass, Clifford},
+  year={1996},
+  publisher={CSLI Publications and Cambridge university press}
+}
