--- a/lmumihs.tex
+++ b/lmumihs.tex
@@ -11,12 +11,18 @@
 \documentclass[journal]{vgtc}                % final (journal style)
 \usepackage[english]{babel}
 \usepackage{mathptmx}
+\usepackage{caption}
+\usepackage{mdframed}
 \usepackage{graphicx}
 \usepackage{times}
 \usepackage[hyphens]{url}
 \usepackage{float}
 \usepackage{dcolumn}
 \usepackage[backend=bibtex, style=numeric, isbn=true, doi=true, maxnames=99]{biblatex}
+% WaterMarker
+\usepackage{draftwatermark}
+\SetWatermarkText{second draft}
+\SetWatermarkScale{1}
 
 \addbibresource{literature.bib}
 
@@ -29,7 +35,7 @@
 
 %% Paper title.
 
-\title{A Literatural Overview on Explanation Types in Personalization}
+\title{A Literatural Overview on Explanations in Personalization and Possible Criterion for Designing a Short Explanation}
 
 %% Put your name here
 \author{Yifei Zhan}
@@ -44,14 +50,18 @@
 
 %% Abstract section.
 \abstract{
-This paper provides a literatural overview of two explanation types in personalization. The first type, detailed explanation,
-is mainly used in desktop scenario, while the second type, short explanation, is more suitable for mobile or automobile scenario.
-//TODO
-
+This paper provides a literatural overview of explanations in personalization and recommender systems.
+It then introduced two standards/criterion on how to design and evaluate explanations in recommender systems.
+Which type of explanations the system should offer to users depends on the goal of the system.
+And in some scenarios, like in a driving context, pages of explanations might not be suitable. In this case,
+short explanations is preferred. In order to explore possible criterion of short explanations, two studies were
+introduced and what we have found is that \textbf{efficiency}, \textbf{persuasiveness} and \textbf{why} question-type-based
+explanations might be suitable for short explanations. However, some more studies need to be done in order to
+check the validity of other criterion in short explanations.
 } % end of abstract
 
 %% Keywords that describe your work.
-\keywords{Explanation types, Recommender system, Personalisation}
+\keywords{Explanation, Recommender system, Personalisation}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%% START OF THE PAPER %%%%%%%%%%%%%%%%%%%%%%
