--- a/introduction.tex
+++ b/introduction.tex
@@ -7,7 +7,7 @@
   From then on, more efforts have been investigated in this field in order to decode the essence of personalization.
   
   \indent In the world of personalization, the most common form of it is recommender systems (RS), which can intelligently
-  give users personalized suggestions. Based on different algorithms, the recommender systems can also be different.
+  give users personalized suggestions. By adopting different algorithms, the recommender systems can also be different.
   Content-based recommendation and collaborative filtering recommendation are two popular types of recommendation, on which large amount 
   of researches have been done. The first one, content-based recommendation, observes utility of items experienced previously and
   their attributes for a given user is taken as input to predict the utility of other items to that user\cite{balabanovic1997fab}.
@@ -23,8 +23,9 @@
   can help inspire user trust and loyalty, increase satisfaction, make it quicker and easier for users to find what they want\cite{tintarev2007survey}.
 
   The following content are divided into four parts. The first part provided an overview of different researches on explanations in recommender systems. 
-  The second part focused on detailed explanation and its criterion, while short explanation and its possible criterion are emphasized the third part.
-  In the end, the last part discussed on some limitations in recent researches, proposed several research questions for future research and provided
+  The second part focused on two possible methods or standards, which are recently often used by researches to evaluate and design explanations of recommender systems.
+  while the third extracts some factors from these two methods, which can be used to design ``short explanations'' in automotive scenario.
+  And the last part discussed on some limitations in recent researches, proposed several research questions for future research and provided
   a summary of this whole paper.
 
 \section{Overview}
@@ -43,7 +44,7 @@
     and the completeness means how truthful each element in an explanation is with respect to the underlying system.
 
     \indent And Brian Y. Lim and Anind K. Dey dived into question types. In their work, Toolkit Support Intelligibility in Context-Aware Applications\cite{lim2010toolkit}, they
-    divided explanation types based on different questions types, that is Why, Why Not, How To, What, What If, Inputs, Outputs and Certainty.
+    divided explanation types into eight factors, which are Why, Why Not, How To, What, What If, Inputs, Outputs and Certainty. More details are explained in later section.
     
     \indent Finally, a great breakthrough has been made by Nava Tintarev and Judith Masthoff.
     They have proposed what they called ``seven possible advantages of an explanation facility''\cite{tintarev2007survey}.
